--- a/src/assets/styles/element-reset/index.scss
+++ b/src/assets/styles/element-reset/index.scss
@@ -25,3 +25,5 @@
 @use "element-plus/theme-chalk/src/radio-button";
 @use "element-plus/theme-chalk/src/carousel";
 @use "element-plus/theme-chalk/src/carousel-item";
+@use "element-plus/theme-chalk/src/upload";
+@use "element-plus/theme-chalk/src/message";
